--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-28  Aldy Hernandez  <aldyh@redhat.com>
+
+	* gcc.dg/20030505.c: Only run for SPE.
+	Remove definition of opaque type.
+
 2003-05-07  Aldy Hernandez  <aldyh@redhat.com>
 
         * gcc.dg/20030505.c: Fix triplet.
