--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-26  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/install.texi (Testing): Adjust required versions of DejaGnu.
+
 2003-07-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* configure.in (--enable-checking): Add fold category.
