--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2003-07-24  Alexandre Oliva  <aoliva@redhat.com>
+
+	* g++.dg/init/enum2.C: New.
+
+2003-07-24  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/inherit/access5.C: New test.
+
 2003-07-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20030725-1.c: New test.
