--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-29  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-decl.c (finish_decl): Shut up warnings.
+
 2003-07-16  Richard Henderson  <rth@redhat.com>
 	    Jakub Jelinek  <jakub@redhat.com>
 
