--- a/libmudflap/ChangeLog
+++ b/libmudflap/ChangeLog
@@ -1,3 +1,9 @@
+2003-07-29  Frank Ch. Eigler  <fche@redhat.com>
+
+	2003-07-29  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+        * configure.in: Update check for union semun.
+
 2003-07-29  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	PR other/11673
