--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2003-07-30  Jason Merrill  <jason@redhat.com>
+
+	* Makefile.in (bubblestrap): Don't require a previous full
+	bootstrap.
+
+	* expr.c (mostly_zeros_p): No longer static.
+	* tree.h: Declare it.
+	* stmt.c (resolve_asm_operand_names): Don't copy the pattern
+	unless we need to do substitutions.
+
 2003-07-24  Jason Merrill  <jason@redhat.com>
 
 	* tree.h (boolean_type_node): Move from C/C++/Java frontends.
