--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2003-07-29  Jakub Jelinek  <jakub@redhat.com>
 
+	* c-decl.c (finish_decl): Shut up warnings.
+
+2003-07-29  Jakub Jelinek  <jakub@redhat.com>
+
 	* expr.c (store_by_pieces): If length is zero and endp is two, abort,
 	othwerise, if length is zero and endp is not two, return "to".
 
