c-parse.in (lineno_stmt_decl_or_labels_ending_decl): Also warn when warn_declaration_after_statement.
2003-07-28  Hans-Peter Nilsson  <hp@bitrange.com>
	    Michael Culbertson  <Michael.J.Culbertson@wheaton.edu>

	* c-parse.in (lineno_stmt_decl_or_labels_ending_decl): Also warn
	when warn_declaration_after_statement.  Call pedwarn_c90, not
	pedwarn.  Correct message: it's "ISO C90", not "ISO C89".
	* c-common.c (warn_declaration_after_statement): Define.
	* c-common.h (warn_declaration_after_statement): Declare.
	* c-errors.c (pedwarn_c90): New function.
	* c-opts.c (COMMAND_LINE_OPTIONS): Add -Wdeclaration-after-statement.
	(c_common_decode_option) <case OPT_Wdeclaration_after_statement>: New.
	* c-tree.h (pedwarn_c90): Declare.
	* toplev.c (documented_lang_options): Document
	-Wdeclaration-after-statement.
	* doc/invoke.texi (Option Summary): Document
	-Wdeclaration-after-statement.
	(Warning Options): Ditto.

2003-07-28  Hans-Peter Nilsson  <hp@bitrange.com>

	* gcc.dg/Wdeclaration-after-statement-1.c,
	gcc.dg/Wdeclaration-after-statement-2.c: New tests.

Co-Authored-By: Michael Culbertson <Michael.J.Culbertson@wheaton.edu>

From-SVN: r70017

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-28  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* gcc.dg/Wdeclaration-after-statement-1.c,
+	gcc.dg/Wdeclaration-after-statement-2.c: New tests.
+
 2003-07-24  Alexandre Oliva  <aoliva@redhat.com>
 
 	* g++.dg/init/enum2.C: New.
