--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,21 @@
+2003-07-28  Hans-Peter Nilsson  <hp@bitrange.com>
+	    Michael Culbertson  <Michael.J.Culbertson@wheaton.edu>
+
+	* c-parse.in (lineno_stmt_decl_or_labels_ending_decl): Also warn
+	when warn_declaration_after_statement.  Call pedwarn_c90, not
+	pedwarn.  Correct message: it's "ISO C90", not "ISO C89".
+	* c-common.c (warn_declaration_after_statement): Define.
+	* c-common.h (warn_declaration_after_statement): Declare.
+	* c-errors.c (pedwarn_c90): New function.
+	* c-opts.c (COMMAND_LINE_OPTIONS): Add -Wdeclaration-after-statement.
+	(c_common_decode_option) <case OPT_Wdeclaration_after_statement>: New.
+	* c-tree.h (pedwarn_c90): Declare.
+	* toplev.c (documented_lang_options): Document
+	-Wdeclaration-after-statement.
+	* doc/invoke.texi (Option Summary): Document
+	-Wdeclaration-after-statement.
+	(Warning Options): Ditto.
+
 2003-07-29  Jakub Jelinek  <jakub@redhat.com>
 
 	* builtins.c (readonly_data_expr): Use K&R definition.
