i386.c (legitimate_pic_address_disp_p): Disallow TLS SYMBOL_REFs not inside UNSPEC even in PLUS rtx.
	* config/i386/i386.c (legitimate_pic_address_disp_p): Disallow TLS
	SYMBOL_REFs not inside UNSPEC even in PLUS rtx.

	* gcc.dg/tls/opt-7.c: New test.

From-SVN: r70021

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-31  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/i386/i386.c (legitimate_pic_address_disp_p): Disallow TLS
+	SYMBOL_REFs not inside UNSPEC even in PLUS rtx.
+
 2003-07-28  Hans-Peter Nilsson  <hp@bitrange.com>
 	    Michael Culbertson  <Michael.J.Culbertson@wheaton.edu>
 
