Makefile.in (GMPINC): Set and use.
	* Makefile.in (GMPINC): Set and use.
	(GMPLIBS): Set it.
	* configure.in: Add test and switches for the GMP library.
	(al_need_gmp): Set from config-lang.in.
	* configure: regen
	* fortran/Make-lang.in: Use GMPLIBS.
	* fortran/config-lang.in: Set need_gmp.
	* sourcebuild.texi: Document need_gmp.

From-SVN: r70059

--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-01  Paul Brook  <paul@nowt.org>
+
+	* fortran/Make-lang.in: Use GMPLIBS.
+	* fortran/config-lang.in: Set need_gmp.
+
 2003-07-27  Andreas Jaeger  <aj@suse.de>
 
 	* trans-decl.c (gfc_generate_constructors): Convert prototype to
