--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-18  Richard Henderson  <rth@redhat.com>
+
+	* attribs.c (handle_used_attribute): Accept static data too.
+
 2003-04-29  Jason Merrill  <jason@redhat.com>
 
 	PR middle-end/10336
