--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-18  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/attr-invalid.c: Allow __used__ on static data.
+
 2003-07-17  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/11087
