--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-01  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/eh/crossjump1.C: New test.
+
 2003-02-18  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/attr-invalid.c: Allow __used__ on static data.
