--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-31  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/tls/opt-7.c: New test.
+
 2003-08-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/eh/crossjump1.C: New test.
