--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-28  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* gcc.dg/Wdeclaration-after-statement-1.c,
+	gcc.dg/Wdeclaration-after-statement-2.c: New tests.
+
 2003-07-31  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/tls/opt-7.c: New test.
