--- a/gcc/doc/install.texi
+++ b/gcc/doc/install.texi
@@ -815,9 +815,10 @@ compiler and may only work properly if you are building the compiler
 with GCC@.  This is on by default when building from CVS or snapshots,
 but off for releases.  More control over the checks may be had by
 specifying @var{list}; the categories of checks available are
-@samp{misc}, @samp{tree}, @samp{gc}, @samp{rtl} and @samp{gcac}.  The
-default when @var{list} is not specified is @samp{misc,tree,gc}; the
-checks @samp{rtl} and @samp{gcac} are very expensive.
+@samp{misc}, @samp{tree}, @samp{gc}, @samp{rtl}, @samp{fold} and
+@samp{gcac}.  The default when @var{list} is not specified is
+@samp{misc,tree,gc}; the checks @samp{rtl} and @samp{gcac} are
+very expensive.
 
 @item --enable-nls
 @itemx --disable-nls
