--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20030725-1.c: New test.
+
 2003-07-28  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* gcc.dg/Wdeclaration-after-statement-1.c,
