rs6000.c (processor_target_table): Add 405fp, 440, 440fp.
        * config/rs6000/rs6000.c (processor_target_table): Add 405fp,
        440, 440fp.
        * config/rs6000/rs6000.h (RTX_COSTS: Add 440 costs.
        * config/rs6000/rs6000.md: Include 440.md.
        * config/rs6000/40x.md: Update and add FPU scheduling information.
        * config/rs6000/440.md: New file.

From-SVN: r70190

--- a/gcc/config/rs6000/440.md
+++ b/gcc/config/rs6000/440.md
@@ -54,12 +54,12 @@
   "ppc440_issue,ppc440_l_pipe")
 
 (define_insn_reservation "ppc440-integer" 1
-  (and (eq_attr "type" "integer,insert_word")
+  (and (eq_attr "type" "integer")
        (eq_attr "cpu" "ppc440"))
   "ppc440_issue,ppc440_i_pipe|ppc440_j_pipe")
 
 (define_insn_reservation "ppc440-imul" 3
-  (and (eq_attr "type" "imul,imul_compare")
+  (and (eq_attr "type" "imul,mult_compare")
        (eq_attr "cpu" "ppc440"))
   "ppc440_issue,ppc440_i_pipe")
 
@@ -79,7 +79,7 @@
   "ppc440_issue,ppc440_i_pipe")
 
 (define_insn_reservation "ppc440-compare" 2
-  (and (eq_attr "type" "cmp,fast_compare,compare,cr_logical,delayed_cr,mfcr")
+  (and (eq_attr "type" "cmp,compare,cr_logical,delayed_cr")
        (eq_attr "cpu" "ppc440"))
   "ppc440_issue,ppc440_i_pipe")
 
@@ -110,11 +110,6 @@
 
 (define_insn_reservation "ppc440-mtjmpr" 4
   (and (eq_attr "type" "mtjmpr")
-       (eq_attr "cpu" "ppc440"))
-  "ppc440_issue,ppc440_i_pipe")
-
-(define_insn_reservation "ppc440-mfjmpr" 2
-  (and (eq_attr "type" "mfjmpr")
        (eq_attr "cpu" "ppc440"))
   "ppc440_issue,ppc440_i_pipe")
 
