--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -68,6 +68,7 @@
 (include "rs64.md")
 (include "mpc.md")
 (include "40x.md")
+(include "440.md")
 (include "603.md")
 (include "6xx.md")
 (include "7xx.md")
