--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-05  Paul Brook  <paul@nowt.org>
+
+	* options.c: Force -fg77-calls.
+
 2003-08-02  Paul Brook  <paul@nowt.org>
 
 	* Makelang.in: Rename G95_* to GFORTRAN_*.
