--- a/libgfortran/ChangeLog
+++ b/libgfortran/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-10  Paul Brook  <paul@nowt.org>
+
+	* Makefile.am (EXTRA_DIST): Remove old files.
+	* Makefile.in: Regenerate.
+
 2003-07-26  Paul Brook  <paul@nowt.org>
 
 	Rename library to libgfortran.
