--- a/libgfortran/ChangeLog
+++ b/libgfortran/ChangeLog
@@ -1,5 +1,10 @@
 2003-08-10  Paul Brook  <paul@nowt.org>
 
+	* intrinsics/strinf_intrinsics.c (compare_string): Return value based
+	on which string is longest.
+
+2003-08-10  Paul Brook  <paul@nowt.org>
+
 	* Makefile.am (EXTRA_DIST): Remove old files.
 	* Makefile.in: Regenerate.
 
