--- a/libgfortran/ChangeLog
+++ b/libgfortran/ChangeLog
@@ -1,3 +1,12 @@
+2003-08-10  Erik Schnetter  <schnetter@uni-tuebingen.de>
+
+	* fmain.c (main): Do not call init and cleanup; call set_args instead.
+	* libgfortran.h (init, cleanup): Remove declarations.
+	(set_args): Add declaration.
+	* runtime/main.c (init, cleanup): Make them static, and give them
+	the constructor and destructor attributes.
+	(set_args): New	function.
+
 2003-08-10  Paul Brook  <paul@nowt.org>
 
 	* intrinsics/strinf_intrinsics.c (compare_string): Return value based
