--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,10 @@
+2003-08-10  Chun Huang  <compiler@sohu.com>
+ 
+	* resolve.c (resolve_formal_arglist): Resolve STATEMENT function.
+	(resolve_symbol): Ditto.
+	* trans-expr.c (gfc_conv_statement_function): New function.
+	(gfc_conv_function_expr): Use it.
+
 2003-08-10  Paul Brook  <paul@nowt.org>
 
 	* trans-array.c (gfc_conv_ss_startstride): Handle functions.
