--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-10  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* gcc.dg/spe1.c: New test.
+
 2003-07-28  Aldy Hernandez  <aldyh@redhat.com>
 
 	* gcc.dg/20030505.c: Only run for SPE.
