--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-07-01  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11137
+	* decl2.c (generate_ctor_or_dtor_function): Tolerate a
+	non-existant ssdf_decls array.
+	(finish_file): Call generator_ctor_or_dtor_function when there are
+	static constructors or destructors and no other static
+	initializations.
+
 2003-07-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* configure.in (--enable-checking): Add fold category.
