--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-01  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11137
+	* g++.dg/init/attrib1.C: New test.
+
 2003-07-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20030725-1.c: New test.
