--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-08-08  Roger Sayle  <roger@eyesopen.com>
+
+	* tree.h (get_identifier) Define a macro form of get_identifier
+	that calls get_identifier_with_length when the string is constant.
+	* stringpool.c (get_identifier): Undefine the macro before giving
+	the function definition.
+
 2003-08-08  Richard Henderson  <rth@redhat.com>
 
         PR target/11535
