--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2003-08-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/11693
+	* gcc.dg/20030811-1.c: New test.
+
+	PR target/11535
+	* gcc.c-torture/execute/20030811-1.c: New test.
+
 2003-07-01  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/11137
